lmao fite me this website is vibes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
- Written for <a class="internal-link" href="{{ site.baseurl }}/about">Paperlands</a>
+ Written in <a class="internal-link" href="{{ site.baseurl }}/about">Paperland</a>
