--- a/_sass/_night-mode.scss
+++ b/_sass/_night-mode.scss
@@ -47,7 +47,7 @@ body.night-mode {
 		bottom: 0;
 		left: 0;
 		pointer-events: none;
-		background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 0.2) 80%);
+		background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 0.4) 40%);
 		width: 100%;
 		height: 75px;
   }
@@ -56,19 +56,19 @@ a {
  padding: 0 0.1em;
  text-decoration: none;
  border-bottom: 1px solid $color-border-night;
- color: $color-primary-night;
+ color: $color-text-night;
 
- &:hover.night-mode {
-    color: #ffffff !important; // Ensure links are readable
-    background: #000000; // Dark background for links
+ &:hover {
+    color: #000000 !important; // Ensure links are readable
+    background: #ffffff; // Dark background for links
  }
 
- &:after.night-mode {
+ &:after {
     position: relative;
     top: -0.5em;
     font-size: 0.7em;
     content: "↗";
-    color: #dddddd; // Adjust for dark background
+    color: #ffffff; // Adjust for dark background
  }
 
  &.internal-link:after,
@@ -171,7 +171,7 @@ nav.night-mode {
 }
 
 code.night-mode {
- background: #333333; // Darker background for code
+ background: rgba(255, 232, 188, 0.3); // Darker background for code
  padding: 0.1em 0.2em;
  border-radius: 4px;
 }
