--- a/_sass/_night-mode.scss
+++ b/_sass/_night-mode.scss
@@ -28,7 +28,7 @@ body.night-mode {
  .tooltip-wrapper  {
     background: black;
     padding: 1em;
-    border: 1px solid #ddd;
+    border: 0.5px solid #ddd;
     border-radius: 4px;
     overflow: hidden;
     position: absolute;
@@ -47,7 +47,7 @@ body.night-mode {
 		bottom: 0;
 		left: 0;
 		pointer-events: none;
-		background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 0.4) 40%);
+		background-image: linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 0.2) 100%);
 		width: 100%;
 		height: 75px;
   }
@@ -67,7 +67,7 @@ a {
     position: relative;
     top: -0.5em;
     font-size: 0.7em;
-    content: "↗";
+    content: "✧";
     color: #ffffff; // Adjust for dark background
  }
 
