--- a/_includes/night-mode.html
+++ b/_includes/night-mode.html
@@ -1,29 +1,34 @@
 <script>
-  // Upon page load, enable dark mode if flag is set in sessionStorage
-  if (sessionStorage.getItem('night_mode') == "true") {
-    setDarkTheme();
-  }
 
   function toggleTheme() {
-    if (hasClass(document.body, 'night-mode')) {
-      setLightTheme();
-    } else {
-      setDarkTheme();
-    }
+  if (document.body.classList.contains('night-mode')) {
+    setLightTheme();
+  } else {
+    setDarkTheme();
   }
+}
 
-  function setLightTheme() {
-    removeClass(document.body, 'night-mode');
-    sessionStorage.setItem('night_mode', "false");
-    document.querySelector("#color-switcher").innerHTML = "🌙";
+function setLightTheme() {
+  document.body.classList.remove('night-mode');
+  sessionStorage.setItem('night_mode', "false");
+  document.querySelector("#color-switcher").innerHTML = "🌙";
+}
+
+function setDarkTheme() {
+  document.body.classList.add('night-mode');
+  sessionStorage.setItem('night_mode', "true");
+  document.querySelector("#color-switcher").innerHTML = "☀️";
+}
+
+// Initialize theme based on session storage
+document.addEventListener('DOMContentLoaded', (event) => {
+  if (sessionStorage.getItem('night_mode') === "true") {
+    setDarkTheme();
+  } else {
+    setLightTheme();
   }
-
-  function setDarkTheme() {
-    addClass(document.body, 'night-mode');
-    sessionStorage.setItem('night_mode', "true");
-    document.querySelector("#color-switcher").innerHTML = "☀️";
-  }
-
+});
+  
   // Source for the following three methods: https://stackoverflow.com/a/28344281
   function hasClass(ele, cls) {
     return !!ele.className.match(new RegExp('(\\s|^)' + cls + '(\\s|$)'));
