--- a/_sass/_night-mode.scss
+++ b/_sass/_night-mode.scss
@@ -2,6 +2,7 @@
 $color-primary-night: hsl(0, 0%, 90%);
 $color-text-night: hsl(0, 0%, 80%);
 $color-subtext-night: hsl(0, 0%, 70%);
+$color-core: rgb(255, 153, 51);
 $color-border-night: hsl(0, 0%, 60%);
 $color-box-background-night: mix($color-primary-night, black, 10%);
 $border-radius: 4px;
@@ -89,7 +90,6 @@ content a.internal-link {
 
 time.night-mode {
  display: block;
- color: $color-subtext-night;
  margin: 0.5em 0 1em;
 }
 
@@ -138,7 +138,7 @@ h6.night-mode {
  line-height: 1.3;
  margin-bottom: 0;
  padding-bottom: 0;
- color: $color-text-night; // Ensure headings are visible
+ color: $color-core; // Ensure headings are visible
 }
 
 
