--- a/shell/codemirror.css
+++ b/shell/codemirror.css
@@ -3,8 +3,8 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
-  width: 400px;
-            height: 400px;
+  width: 100%;
+            height: 100%;
             margin: 10px;
           
   color: black;
