--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -36,6 +36,6 @@ layout: default
 
 <hr>
 
-<p>Here are all the notes in this garden, along with their links, visualized as a graph.</p>
+<p>Here are all the notes in our garden, along with their links, visualized as a graph.</p>
 
 {% include notes_graph.html %}
