--- a/shell/codemirror.css
+++ b/shell/codemirror.css
@@ -3,10 +3,8 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
-  width: 100%;
-            height: 100%;
-            margin: 10px;
-          
+  width: inherit;
+            height: inherit;
   color: black;
   z-index: 2;
   position: fixed;
