--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -104,13 +104,13 @@ footer {
   padding-top: 1em;
 }
 
-img {
-  max-width: 100%;
-  display: block;
-  margin: 0 auto;
-  max-height: 75vh;
-  border-radius: $border-radius;
-}
+// img {
+//   max-width: 100%;
+//   display: block;
+//   margin: 0 auto;
+//   max-height: 75vh;
+//   border-radius: $border-radius;
+// }
 
 blockquote {
   padding: 1.5em;
