--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -135,9 +135,9 @@ sup {
  * Remove the border on images inside links in IE 10.
  */
 
-img {
-  border-style: none;
-}
+// img {
+//   border-style: none;
+// }
 
 /* Forms
    ========================================================================== */
