dynamic is my middle name

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,12 @@
 
   <link
       rel="stylesheet"
-      href="https://unpkg.com/papercss@1.9.2/dist/paper.min.css"
+      href="assets/css/paper.min.css"
     />
 
   <meta property="og:site_name" content="{{ site.title }}">
 
-  <link rel="icon" href="logo.svg">
+  <link rel="icon" href="/favicon.ico" >
 
 
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
