--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,7 @@
-<div class="nav-container">
-    <a class="internal-link" href="{{ site.baseurl }}/"><b>{{ site.title }}</b></a>
+
+    <a href="{{ site.baseurl }}/" >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" height="40"  >
+            <image xlink:href="/assets/logo.svg" width="50" height="50"/>
+        </svg>
+        </a>
     <a id="color-switcher" onclick="toggleTheme()">🌙</a>
-</div>
