--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -25,11 +25,14 @@ body {
     font-size: 1.2rem;
   }
 }
-.nav-container {
+
+ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    background-color: inherit;
+
 }
 
 .color-switcher {
