--- a/_includes/notes_graph.html
+++ b/_includes/notes_graph.html
@@ -183,7 +183,7 @@
 
         window.onresize = reportWindowSize;
 
-        const svg = d3.select("svg");
+        const svg = d3.select(element);
         const width = Number(svg.attr("width"));
         const height = Number(svg.attr("height"));
         let zoomLevel = 1;
