I suspect we just need to suppress tooltip

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,6 +1,6 @@
 <div class="card">
   {% if include.href %}
-  <a id="subdue-link"  href="{{ include.href }}">
+  <a   href="{{ include.href }}">
    {% endif %}
     <div class="card-body">
       <h4 class="card-title">{{ include.title }}</h4>
