remove link icons

--- a/_sass/_night-mode.scss
+++ b/_sass/_night-mode.scss
@@ -68,7 +68,7 @@ a:not(:has(*)) {
     position: relative;
     top: -0.5em;
     font-size: 0.7em;
-    content: "✧";
+   //  content: "✧";
     color: #ffffff; // Adjust for dark background
  }
 
