--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -167,7 +167,7 @@ a:not(:has(*)) {
     position: relative;
     top: -0.5em;
     font-size: 0.7em;
-    content: "↗";
+    // content: "↗";
     color: #aaaaaa;
   }
   &.internal-link:after,
