nav margin issues

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,14 +30,15 @@
 <style>
     nav {
         background-color: #fff;
-        /* margin-right: 10vw; */
-        /* padding-right: 10vw; */
-        /* width: 97vw; */
     }
     body.night-mode {
         nav {
             background-color: #222222;
         }
+    }
+
+    nav .collapsible > label {
+        margin-right: 8vw
     }
 
     html {
