fix nav margin for dark-mode

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -40,6 +40,10 @@
     nav .collapsible > label {
         margin-right: 8vw
     }
+    body.night-mode nav .collapsible > label {
+        margin-right: 8vw;
+        background-color: #222222;
+    }
 
     html {
         scroll-behavior: smooth;
