add _self for .card-link

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <a href="{{ include.href }}">
+  <a href="{{ include.href }}" target="_self" class="card-link">
     <div class="card-body">
       <h4 class="card-title">{{ include.title }}</h4>
       <!-- <h5 class="card-subtitle">Nice looking subtitle.</h5> -->
