--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -42,26 +42,34 @@
 
 
 <style>
-    .work_with_us_content_el_2 {
-        flex-basis: 40%;
-        
-        label {
-            margin-bottom: 0;
-            margin-top: 10px;
-        }
-    }
+  #paper_form {
+    text-align: center;
+  }
+  
+  .h-captcha{
+    position: relative;
+  }
+
+  .work_with_us_content_el_2 {
+    flex-basis: 40%;
     
-    .toast {
-        position: fixed;
-        bottom: 20px;
-        right: 0vh;
-        transform: translateX(-50%);
-        padding: 10px 20px;
-        z-index: 9999;
-        opacity: 0;
-        visibility: hidden;
-        display: none;
-        animation: fade-in 10s ease-in-out forwards;
+    label {
+        margin-bottom: 0;
+        margin-top: 10px;
+    }
+  }
+    
+  .toast {
+    position: fixed;
+    bottom: 20px;
+    right: 0vh;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    display: none;
+    animation: fade-in 10s ease-in-out forwards;
   }
 
   @keyframes fade-in {
