fixed letter to paperland

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,9 +18,9 @@
         
         <div class="collapsible-body">
             <ul class="inline">
-                <li><a href="#projects" id="scroll-link">Projects</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="/#projects" id="scroll-link">Projects</a></li>
+                <li><a href="/#blog">Blog</a></li>
+                <li><a href="/#contact">Contact</a></li>
                 <li><a id="color-switcher" onclick="toggleTheme()">🌙</a></li>
             </ul>
         </div>
