--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,4 +1,5 @@
-<form id="paper_form" class="col form-group card work_with_us_content_el_2" accept-charset="UTF-8" action="https://india.fly.dev/proxy/apps/guru/work" method="POST">
+<!-- https://india.fly.dev/proxy/apps/guru/work -->
+<form id="lettertopaperland" class="col form-group card work_with_us_content_el_2" accept-charset="UTF-8" action="https://india.fly.dev/proxy/apps/guru/work" method="POST">
     <label for="name-input">Your Name *</label>
     <input id="name-input" type="text" name="name" placeholder="Alan Kay">
 
@@ -12,10 +13,10 @@
     <textarea id="message-input" name="message" rows="4" placeholder="There are more contexts than the one that we're in — the one that we think is reality"></textarea>
     
     <input type="hidden" name="return_url" value="{{ page.url | absolute_url }}">
-    <br>
+    <span> &nbsp;  </span>
     <div class="h-captcha" data-sitekey="7688737e-8d00-4c1e-acdc-828ee1c02e08"></div>
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
-    <br>
+    <span> &nbsp;  </span>
 
     <button type="submit">Submit</button>
 </form>
@@ -100,7 +101,7 @@
 
 <script>
     const urlParams = new URLSearchParams(window.location.search)
-    if ("urlParams.get('sent')" == "true"){
+    if (urlParams.get('sent') == "true"){
         const element = document.getElementById('toast-good');
         element.style.display = 'block'; // Show the element
     }
