--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
 
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.title }}{% endif %}">
 
+  <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   <link
       rel="stylesheet"
       href="assets/css/paper.min.css"
