--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,10 +8,11 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.title }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
-  <link
+  <!-- <link
       rel="stylesheet"
       href="assets/css/paper.min.css"
-    />
+    /> -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Grantha&display=swap" rel="stylesheet">
 
   <meta property="og:site_name" content="{{ site.title }}">
 
