--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   {% include head.html %}
-  <body>
+  <body class="bg-background">
     {% include nav.html %}
     <div class="wrapper">
       <main>{{ content }}</main>
