--- a/_includes/quotes.html
+++ b/_includes/quotes.html
@@ -30,21 +30,21 @@
   .testimonial .testimonial_text:after {
     content: "\201C";
     position: absolute;
-    font-size: 120px;
+    font-size: 85px;
     line-height: 1;
     color: #757f9a;
     font-style: normal;
   }
 
   .testimonial .testimonial_text:before {
-    top: 25px;
+    top: 10px;
     left: 15px;
   }
 
   .testimonial .testimonial_text:after {
     content: "\201D";
     right: 15px;
-    bottom: -0.6em;
+    bottom: -10px;
   }
 
   .testimonial div {
