notes and addenums

--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -13,7 +13,7 @@ layout: default
       {% endif %}
     </time>
   </div>
-  <div id="notes-entry-container">
+  <div  class="prose prose-headings:underline lg:prose-lg w-full">
     <content>
       {{ content }}
       <div style="text-align: right; color: #f93;"> <i>~ {{ page.author }}</i></div>
