--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,10 @@
 ---
 ---
 
-@import "../_sass/normalize";
-@import "../_sass/code";
-@import "../_sass/style";
-@import "../_sass/night-mode";
+@use "../_sass/normalize";
+@use "../_sass/code";
+@use "../_sass/style";
+@use "../_sass/night-mode";
 
 // Set the font-family globally
 body {
