plausibly adding analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,9 @@
 
   <link rel="icon" href="/favicon.ico" >
 
+  <script defer data-domain="paperland.in" src="https://odin.fly.dev/js/script.js"></script>
+
+
 
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
 
