--- a/_includes/night-mode.html
+++ b/_includes/night-mode.html
@@ -1,33 +1,33 @@
 <script>
 
-  function toggleTheme() {
-    if (document.body.classList.contains('night-mode')) {
-      setLightTheme();
-    } else {
-      setDarkTheme();
-    }
-  }
+  // function toggleTheme() {
+  //   if (document.body.classList.contains('night-mode')) {
+  //     setLightTheme();
+  //   } else {
+  //     setDarkTheme();
+  //   }
+  // }
 
-  function setLightTheme() {
-    document.body.classList.remove('night-mode');
-    sessionStorage.setItem('night_mode', "false");
-    document.querySelector("#color-switcher").innerHTML = "🌙";
-  }
+  // function setLightTheme() {
+  //   document.body.classList.remove('night-mode');
+  //   sessionStorage.setItem('night_mode', "false");
+  //   document.querySelector("#color-switcher").innerHTML = "🌙";
+  // }
 
-  function setDarkTheme() {
-    document.body.classList.add('night-mode');
-    sessionStorage.setItem('night_mode', "true");
-    document.querySelector("#color-switcher").innerHTML = "☀️";
-  }
+  // function setDarkTheme() {
+  //   document.body.classList.add('night-mode');
+  //   sessionStorage.setItem('night_mode', "true");
+  //   document.querySelector("#color-switcher").innerHTML = "☀️";
+  // }
 
-  // Initialize theme based on session storage
-  document.addEventListener('DOMContentLoaded', (event) => {
-    if (sessionStorage.getItem('night_mode') === "true") {
-      setDarkTheme();
-    } else {
-      setLightTheme();
-    }
-  });
+  // // Initialize theme based on session storage
+  // document.addEventListener('DOMContentLoaded', (event) => {
+  //   if (sessionStorage.getItem('night_mode') === "true") {
+  //     setDarkTheme();
+  //   } else {
+  //     setLightTheme();
+  //   }
+  // });
     
   // Source for the following three methods: https://stackoverflow.com/a/28344281
   function hasClass(ele, cls) {
