--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,8 @@
 
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 
+  <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+
   {% if page.image %}
   <meta property="og:image" content="{{ site.url }}{{ page.image }}">
   {% endif %}
