--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 
   <link rel="icon" href="/favicon.ico" >
 
-  <script defer data-domain="paperland.in" src="https://odin.fly.dev/js/script.js"></script>
+  <script async defer data-domain="paperland.in" src="https://odin.fly.dev/js/script.js"></script>
 
 
 
